Requisito 10 finalizado e adicionado alguns estilos na pagina

--- a/index.html
+++ b/index.html
@@ -11,53 +11,70 @@
 
 	<header id="cabecalho">
 		<h1 id="titulo">Lições aprendidas - Trybe!</h1>
+		<nav id="navegacao">
+			<ul>
+				<li><a href="#quem-sou">Quem sou</a></li>
+				<li><a href="#redes-sociais">Redes Sociais</a></li>
+				<li><a href="#aprendizado">Aprendizado</a></li>
+			</ul>
+		</nav>
 	</header>
 
-	<h2>Victor Hugo Bezerra</h2>
-	<img id="minha_foto" src="minha-foto.jpg" alt="Foto pessoal de Victor Hugo">
-	<h2>Redes Sociais:</h2>
-	<ul>
-		<li><a href="https://www.linkedin.com/in/victorhbm/" target="_blank">LinkedIn</a></li>
-		<li><a href="https://github.com/Victorhbm" target="_blank">GitHub</a></li>
-	</ul>
+	<section id="quem-sou">
+		<h2>Victor Hugo Bezerra</h2>
+		<img id="minha_foto" src="minha-foto.jpg" alt="Foto pessoal de Victor Hugo">
+		<h2 id="redes-sociais">Redes Sociais:</h2>
+		<ul>
+			<li><a href="https://www.linkedin.com/in/victorhbm/" target="_blank">LinkedIn</a></li>
+			<li><a href="https://github.com/Victorhbm" target="_blank">GitHub</a></li>
+		</ul>
+	</section>
 
-	<ol id="licoes_aprendidas">
-		<li>Unix</li>
-		<li>Bash</li>
-		<li>Git</li>
-		<li>GitHub</li>
-		<li>Inteligência Emocional</li>
-		<li>Emoções</li>
-		<li>HTML</li>
-		<li>CSS</li>
-		<li>HTML Semântico</li>
-		<li>Box Model</li>
-	</ol>
-	<ul id="licoes_a_aprender">
-		<li>JavaScript</li>
-		<li>React</li>
-		<li>DOM</li>
-		<li>CSS Responsivo</li>
-		<li>Autoconhecimento</li>
-		<li>Comunicação</li>
-		<li>SQL</li>
-		<li>Node JS</li>
-		<li>Python</li>
-		<li>Algoritmos</li>
-	</ul>
 
-	<article>
-		<h2>Aprendizado na Trybe</h2>
-		<p>O meu aprendizado na <strong>Trybe</strong> está sendo muito incrivel, apesar da rotina intensa, sinto que estou absorvendo muito bem todo o conteúdo passado. Isso graças ao meu esforço e também a toda <strong>estrutura, equipes e conteúdo didático</strong> que a Trybe nos proporciona. O primeiro módulo está bem tranquilo por eu já ter uma base de HTML e CSS, porém foi possível aprender muitos conteúdos novos e aprimorar ainda mais esse conhecimento. </p>
+	<article id="aprendizado">
+		<section class="licoes">
+			<h2>Lições aprendidas</h2>
+			<ol id="licoes_aprendidas">
+				<li>Unix</li>
+				<li>Bash</li>
+				<li>Git</li>
+				<li>GitHub</li>
+				<li>Inteligência Emocional</li>
+				<li>Emoções</li>
+				<li>HTML</li>
+				<li>CSS</li>
+				<li>HTML Semântico</li>
+				<li>Box Model</li>
+			</ol>
+			<h2>Lições a aprender</h2>
+			<ul id="licoes_a_aprender">
+				<li>JavaScript</li>
+				<li>React</li>
+				<li>DOM</li>
+				<li>CSS Responsivo</li>
+				<li>Autoconhecimento</li>
+				<li>Comunicação</li>
+				<li>SQL</li>
+				<li>Node JS</li>
+				<li>Python</li>
+				<li>Algoritmos</li>
+			</ul>
+		</section>
+	
+		<section class="aprendizado">
+			<h2>Aprendizado na Trybe</h2>
+			<p>O meu aprendizado na <strong>Trybe</strong> está sendo muito incrivel, apesar da rotina intensa, sinto que estou absorvendo muito bem todo o conteúdo passado. Isso graças ao meu esforço e também a toda <strong>estrutura, equipes e conteúdo didático</strong> que a Trybe nos proporciona. O primeiro módulo está bem tranquilo por eu já ter uma base de HTML e CSS, porém foi possível aprender muitos conteúdos novos e aprimorar ainda mais esse conhecimento. </p>
+		</section>
 	</article>
 
 	<aside>
 		<h2>Mais sobre o aprendizado</h2>
-		<p>Estou realmente aprendendo a programar, a aprender e a trabalhar. E isso é apenas o começo de todo conhecimento que vem por aí, não poderia ter escolhido uma escola melhor.</p>
+		<p>Estou realmente aprendendo a <strong>programar, a aprender e a trabalhar</strong>. E isso é apenas o começo de todo conhecimento que vem por aí, não poderia ter escolhido uma escola melhor.</p>
 	</aside>
+	
 
 	<footer id="rodape">
-
+		<p>Conteúdo compilado por Victorhbm, 2021</p>
 	</footer>
 
 </body>
