Estruturação geral do HTML.

--- a/index.html
+++ b/index.html
@@ -5,5 +5,51 @@
     <title>Lessons Learned by Nayara</title>
 </head>
 <body>
+    <header id="cabecalho">
+        <h1 id="titulo">Lessons Learned by Nayara</h1>
+    </header>
+    <main>
+        <article>
+            <h2>"Artigo sobre aprendizado"</h2>
+            <p>Entre 300 e 600 caracteres.</p>
+            <section>
+                <h3>Lições aprendidas:</h3>
+                <ol id="licoes_aprendidas">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
+            </section>
+            <section>
+                <h3>Lições a aprender:</h3>
+                <ul id="licoes_a_aprender">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </section>
+        </article>
+        <aside>
+            <h2>"Passagem sobre meu aprendizado."</h2>
+            <p>Entre 100 e 300 caracteres.</p>
+        </aside>
+    </main>
+    <footer id="rodape">
+        <p>RODAPÉ</p>
+    </footer>
 </body>
 </html>
