--- a/index.html
+++ b/index.html
@@ -29,9 +29,24 @@
       <li>Estruturar páginas web com HTML</li>
       <li>Estilizar tags HTML com CSS</li>
       <li>Posicionar elementos numa página web</li>
-      <li>Utilizar Pseudoclasses de CSS</li>
       <li>Utilizar HTML semântico para criar páginas web acessíveis</li>
+      <li>Praticar o autoconhecimento</li>
     </ol>
+  </section>
+  <section>
+    <h2>Lições a Aprender</h2>
+    <ul id="licoes_a_aprender">
+      <li>Desenvolver códigos em JavaScript</li>
+      <li>Realizar testes automatizados</li>
+      <li>Utilizar bancos de dados</li>
+      <li>Conhecer arquitetura de redes</li>
+      <li>Dar e receber feedbacks</li>
+      <li>Desenvolver códigos em Python</li>
+      <li>Aprender estruturas de dados</li>
+      <li>Aprender metodologias ágeis</li>
+      <li>Aprender programação orientada a objetos</li>
+      <li>Metodologias para resolução de problemas</li>
+    </ul>
   </section>
 </body>
 
