conclusão do requisito 3 ao 11, add gui.jpg

--- a/index.html
+++ b/index.html
@@ -8,8 +8,59 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="cabecalho">
+    <header id="cabecalho">
         <h1 id="titulo">Titulo</h1>
-    </div>
+    </header>
+    <nav>
+        <ul>
+            <li><a href=#licoes_aprendidas>Lições Aprendidas</a></li>
+            <li><a href=#licoes_a_aprender>Lições a aprender</a></li>
+            <li><a href="https://www.betrybe.com" target="_blank">Trybe</a></li>
+        </ul>
+    </nav>
+    <img id="minha_foto" src="gui.jpg" width="100px" alt="Foto de Guilherme Serafim">
+    <section>
+        <h2>Lições Aprendidas</h2>
+    <ol id="licoes_aprendidas">
+        <li>Git</li>
+        <li>Github</li>
+        <li>Unix</li>
+        <li>Bash</li>
+        <li>Internet</li>
+        <li>Soft-Skills</li>
+        <li>html</li>
+        <li>Css</li>
+        <li>Como pesquisar</li>
+        <li>html semântico</li>
+    </ol>
+    </section>
+    <section>
+        <h2>Lições a aprender</h2>
+    <ul id="licoes_a_aprender">
+        <li>Javascript</li>
+        <li>Lógica de programação</li>
+        <li>DOM</li>
+        <li>Eventos</li>
+        <li>Web Storage</li>
+        <li>Forms</li>
+        <li>Flexbox</li>
+        <li>Responsivo</li>
+        <li>Back-end</li>
+        <li>Ciência da computação</li>        
+    </ul>
+    </section>
+    <article>
+        Por mais dificil que seja tomar riscos, vi na <a href="https://www.betrybe.com" target="_blank">Trybe</a> a oportunidade de aprende uma nova profissão e mudar o rumo em que minha vida estava indo.
+        Em pouco tempo já aprendi muito, e não somente hard-skills, mas também soft-skills.
+        E mesmo sem saber como será a linha de chegada ao final do curso, já posso dizer que, a caminhada será transformadora! 
+    </article>
+    <aside>
+        No inicio do curso, por mais que tivesse sido avisado, senti um pouco de desconforto com o sistema de aprendizado “ativo”, mas em pouco mais de uma semana já vejo como essencial para uma real fixação do aprendizado.
+    </aside>
+    
+    
+    <footer id="rodape">
+        @Copyright Serafim 2021- All Right Reserved. 
+    </footer>
 </body>
 </html>
