Concluido estrutura do HTML considerando toda semântica

--- a/index.html
+++ b/index.html
@@ -15,13 +15,82 @@
         </div>
     </header>
     <main>
-        <section>
-            <div>
-                <img src="/sd-016-b-project-lessons-learned/img/Lucas_2021-3.jpg" alt="Imagem de Perfil">
-            </div>
-
-        </section>
+        <article>
+            <section id="perfil">
+                <div id="perfil__box_img">
+                    <img id="minha_foto" src="/sd-016-b-project-lessons-learned/img/Lucas_2021-3.jpg" alt="Imagem de Perfil">
+                    <h2 id="meu_nome">Lucas Camargo</h2>
+                </div>
+            </section>
+            <section id="listas">
+                <div class="listas__box">
+                    <h2>Lições Aprendidas</h2>
+                    <ol id="licoes_aprendidas">
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                    </ol>
+                </div>
+                <div class="listas__box">
+                    <h2>Lições a Aprender</h2>
+                    <ul id="licoes_a_aprender">
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                        <li class="list_item"></li>
+                    </ul>
+                </div>
+            </section>
+            <article id="artigo">
+                <section id="artigo_meu_aprendizado">
+                    <div id="artigo_box">
+                        <h2>Meu Aprendizado</h2>
+                        <p>...</p>
+                    </div>
+                </section>
+                <aside>
+                    <div>
+                        <h2>Meu Aprendizado</h2>
+                        <h3>A estrada até aqui</h3>
+                        <P>...</P>
+                    </div>
+                </aside>
+            </article>
+        </article>
     </main>
+    <footer id="rodape">
+        <nav>
+            <ul>
+                <li><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-github.png" alt="Github">
+                    <a href="https://github.com/lbcamargo94">Github</a>
+                </li>
+                <li><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-instagram.png" alt="Instagram">
+                    <a href="https://www.instagram.com/l.b.camargo/">Instagram</a>
+                </li>
+                <li><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-facebook.png" alt="Facebook">
+                    <a href="https://www.facebook.com/lucas.bueno.5074644">Facebook</a>
+                </li>
+                <li><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-linkedin_.png" alt="Linkedin">
+                    <a href="https://www.linkedin.com/in/lucas-camargo-80a015190/">Linkedin</a>
+                </li>
+                <li><img class="icon" src="/sd-016-b-project-lessons-learned/icon/gmail_.png" alt="G-mail">
+                    <a href="https://mail.google.com/mail/u/0/#inbox">G-mail</a>
+                </li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 
 </html>
