--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
       <img id="minha_foto" alt="Gabriel de casaco amarelo" src="foto.jpeg">
       <hr>
-      <section>
+      <section id="ensinamentos_current">
         <h2>Ensinamentos Trybe atá o momento!</h2>
         <article>
           <p>
@@ -23,6 +23,13 @@
             O CSS por sua vez é responsável pela estilização da página.
           </p>
         </article>
+        <h2>Uma breve passagem</h2>
+        <aside>
+          <p>
+            Esse primeiro projeto! Estou nervoso, porém otimista :D<br>
+            Acredito que é um ótimo desafio para por a prova o conteúdo absorvido até aqui.
+          </p>
+        </aside>
       </section>
       <section>
         <div>
@@ -61,5 +68,14 @@
     <footer id="rodape">
       <p>Você pode clicar <a href="https://jovemnerd.com.br/" target="_blank">aqui</a> para acessar um blog de notícias sobre o mundo geek!</p>
     </footer>
+    <hr>
+    <h2>Menu de navegação</h2>
+    <nav>
+      <ul>
+        <li><a href="#minha_foto">Ínicio</a></li>
+        <li><a href="#ensinamentos_current">Ensinamentos</a></li>
+        <li><a href="#rodape">Recomendação de blog</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
