estilizacaoda header, font family/size e outros

--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Lessons Learned</title>
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Projeto01</h1>
+        <h1 id="titulo">Lessons Learned</h1>
+        <nav>
+            <a class="link" href="#licoes_aprendidas">Lições</a>
+            <a class="link" href="">Depoimento</a>
+            <a class="link" href="https://github.com/Eglany" target="_blank">GitHub</a>
+        </nav>
     </header>
     <section>
         <img id="minha_foto" src="image_Profile.jpg" alt="">
-        <a href="https://github.com/Eglany" target="_blank">GitHub</a>
         <h2>Lições</h2>
         <ol id="licoes_aprendidas">
             <li>Unix</li>
