Requisito 10 com o elemento nav

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
         <!------------ CABEÇALHO ------------>
         <header id="cabecalho">
             <h1 id="titulo">Lições aprendidas - Trybe! </h1>
+            
+            <nav id="navegacao">
+                <ul>
+                    <li>Home</li>
+                    <li>Login</li>
+                </ul>
+            </nav>
         </header>
 
         <!------------ CONTEÚDO PRINCIPAL ------------>
