--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <footer id="rodape">
             Todos direitos reservado, Hugo Daniel.
         </footer>
+        <a href="https://github.com/HugoDaniel2000" target="_blank" id="link">GitHub</a>
     </main>
 </body>
 </html>
