--- a/index.html
+++ b/index.html
@@ -20,43 +20,46 @@
         <div class="foto-perfil">
             <img id="minha_foto" src="pp.jpg" alt="minha foto">
         </div>
-
-        <!-- Requisito 04 -  -->
-        <div class="listas">
-            <section class="lado-esquerdo">
-                <h3>Lições aprendidas:</h3>
-                <ol id="licoes_aprendidas">
-                    <li>paasdf</li>
-                    <li>asdfasdf</li>
-                    <li>asdfasdf</li>
-                    <li>paasdf</li>
-                    <li>asdfasdf</li>
-                    <li>asdfasdf</li>
-                    <li>paasdf</li>
-                    <li>asdfasdf</li>
-                    <li>asdfasdf</li>
-                    <li>wieruov</li>
-                </ol>
-            </section>
-            <!-- Requisito 05 -  -->
-            <section class="lado-direito">
-                <h3>Lições a aprender:</h3>
-                <ol id="licoes_a_aprender">
-                    <li>paasdf</li>
-                    <li>asdfasdf</li>
-                    <li>asdfasdf</li>
-                    <li>paasdf</li>
-                    <li>asdfasdf</li>
-                    <li>asdfasdf</li>
-                    <li>asdfasdf</li>
-                    <li>paasdf</li>
-                    <li>asdfasdf</li>
-                    <li>wieruov</li>
-                </ol>
-
-            </section>
-        </div>
+        <article>
+            <!-- Requisito 04 - OK -->
+            <div class="listas">
+                <section class="lado-esquerdo">
+                    <h3>Lições aprendidas:</h3>
+                    <ol id="licoes_aprendidas">
+                        <li>paasdf</li>
+                        <li>asdfasdf</li>
+                        <li>asdfasdf</li>
+                        <li>paasdf</li>
+                        <li>asdfasdf</li>
+                        <li>asdfasdf</li>
+                        <li>paasdf</li>
+                        <li>asdfasdf</li>
+                        <li>asdfasdf</li>
+                        <li>wieruov</li>
+                    </ol>
+                </section>
+                <!-- Requisito 05 - OK -->
+                <section class="lado-direito">
+                    <h3>Lições a aprender:</h3>
+                    <ul id="licoes_a_aprender">
+                        <li>paasdf</li>
+                        <li>asdfasdf</li>
+                        <li>asdfasdf</li>
+                        <li>paasdf</li>
+                        <li>asdfasdf</li>
+                        <li>asdfasdf</li>
+                        <li>asdfasdf</li>
+                        <li>paasdf</li>
+                        <li>asdfasdf</li>
+                        <li>wieruov</li>
+                    </ul>
+                </section>
+        </article>
     </main>
+    <!-- Requisito 06 - -->
+    <footer id="rodape">
+        <p>Conteúdo compilado por <a target="_blank" href="https://gabrielrodriguesleite.github.io">Gabriel Rodrigues Leite</a>, 2021.</p>
+    </footer>
 </body>
 </html>
 
