deixando menos feio

--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
     </ul>
 </aside>
 
-
 <table id="tabela_spec">
     <tr> <td>BLOCO</td><td>TÓPICO</td> </tr>
     <tr> <td>linha 1</td><td>dados 1</td> </tr>
@@ -83,7 +82,12 @@
 
 </table>
 
-<footer id="rodape"></footer>
+<footer id="rodape"> 
+    Feito por: <br>
+    &copy; eu <br>
+    &reg; eu_mesmo <br>
+    &trade; e Danilo <br>
+</footer>
 
 </body>
 </html>
