--- a/index.html
+++ b/index.html
@@ -9,10 +9,53 @@
 
     </head>
     <body>
-        <div id="cabecalho";>   
+        <header id="cabecalho";>   
             <h1 id="titulo"> botando em prática</h1> 
+            <div id="minha_foto"> <img src="" alt=""> </div>
+            <nav> <a href="">  </a></nav>
 
-        </div>        
+        </header>   
+        <div>
+            <ol id="licoes_aprendidas">
+                <li> </li>
+                <li> </li>
+                <li> </li>
+                <li> </li>
+                <li> </li>
+                <li> </li>
+                <li> </li>
+                <li> </li>
+                <li> </li>
+                <li> </li>
+            </ol>
+            
+        </div>
+        <div>
+            <ul id="licoes_a_aprender">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div> 
+        <article> 
+
+        </article>
+        <aside>
+
+        </aside>
+
+
+        <footer id="rodape">
+
+
+        </footer>    
     </body>
 
 
