--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="cabecalho">
+    <header id="cabecalho">
       <h1 id="titulo">Projeto: Lessons Learned | Trybe</h1>
-    </div>
+    </header>
     <main>
       <img id="minha_foto" src="gilson.png" alt="foto de Gilson" />
 
@@ -41,5 +41,9 @@
       </ul>
 
     </main>
+
+    <footer id="rodape">
+      <p>Feito com &#128153; por Gilson</p>
+    </footer>
   </body>
 </html>
