--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <title>Document</title>
 </head>
 <body>
-  <div>
+  <div class="topo_da_pagina">
       <header id="cabecalho">
           <h1 id="titulo">Lições aprendidas - Trybe!</h1>
-      </header>   
-    </div>
+      </header>       
+  </div>
     <main>
-      <div>
-          <nav>
-              <img id="minha_foto" src="https://scontent.fcpv20-1.fna.fbcdn.net/v/t1.18169-9/13417402_1747824612095920_2590072420852211395_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=174925&_nc_eui2=AeFgcHcpQjiKIsw6e-3EY6i_cpbgw3WusNlyluDDda6w2ci6DqM8LLHK2yJNjgGL3PxjCqh2cYWzFtsad6jvcBHC&_nc_ohc=b9irE6YDKg0AX-Vg4K0&tn=x23hazxhTZY31b8O&_nc_ht=scontent.fcpv20-1.fna&oh=512b19d0369c42dc14527a93e63f8ee1&oe=6149F2B0" alt="Foto_do_Perfil">
-              <a href="linkedin.com/in/matheus-gomes-189203a3" target="_blank">Meu Linkedin</a>
-          </nav>
-      </div>
-      <div>
-          <section>
-              <h2>Lições</h2>
-              <div>
+        <div>
+            <section>
+              <div class="Foto_e_link">
+                  <nav>
+                      <img id="minha_foto" src="https://scontent.fcpv20-1.fna.fbcdn.net/v/t1.18169-9/13417402_1747824612095920_2590072420852211395_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=174925&_nc_eui2=AeFgcHcpQjiKIsw6e-3EY6i_cpbgw3WusNlyluDDda6w2ci6DqM8LLHK2yJNjgGL3PxjCqh2cYWzFtsad6jvcBHC&_nc_ohc=b9irE6YDKg0AX-Vg4K0&tn=x23hazxhTZY31b8O&_nc_ht=scontent.fcpv20-1.fna&oh=512b19d0369c42dc14527a93e63f8ee1&oe=6149F2B0" alt="Foto_do_Perfil">
+                      <a id="perfilt" href="http://linkedin.com/in/matheus-gomes-189203a3" target="_blank"><strong>Linkedin</strong></a>
+                  </nav>
+              </div>
+              <div class="lista">
+                  <h2>Lições</h2>
                   <ol id="licoes_aprendidas">
                       <li>Comandos do Terminal</li>
                       <li>Git</li>
