Requisitos 10 e 11, alem de mudancas no style.css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,34 +10,42 @@
 <body>
   <header id="cabecalho">
 		<h1 id="titulo">Aprendizado adquirido-Trybe!</h1>
+		<nav class="menu">
+				<a href="https://github.com/Pedrolvo" target="_blank">Experiencia</a>
+				<a href="https://www.betrybe.com/" target="_blank">Trybe</a>
+		</nav>
   </header>
-	<main>
-		<img id="minha_foto" src="rsz_pessoaprogamando.jpg" alt="Pessoa Progamando">
-		<ol id="licoes_aprendidas">
-			<li>Fundamentos do Desenvolvimento Web.</li>
-			<li>Introdução-Unix & Shell.</li>
-			<li>Unix & Bash.</li>
-			<li>Git & GitHub.</li>
-			<li>Internet.</li>
-			<li>Intrudução-HTML & CSS.</li>
-			<li>HTML & CSS-Estruturas de página.</li>
-			<li>HTML & CSS-Primeiros passos em CSS.</li>
-			<li>HTML & CSS-Seletores e posicionamento.</li>
-			<li>HTML Semântico.</li>
-		</ol>
-		<ul id="licoes_a_aprender">
-			<li>JavaScript.</li>
-			<li>Lógica de Progamação.</li>
-			<li>JavaScript: DOM, Eventos e Web Storage.</li>
-			<li>HTML & CSS: Forms, Flexbox e Responsivo.</li>
-			<li>JavaScript Es6 e Testes Unitários.</li>
-			<li>Higher Order Functions do JavaScript ES6.</li>
-			<li>JavaScript Assícrono e Promises.</li>
-			<li>Testes automatizados com Jest.</li>
-			<li>Desenvolvimento Front-end.</li>
-			<li>Desenvolvimento Back-end.</li>
-		</ul>
-		<article>
+	<main class="principal">
+		<section class="inicio">
+			<img id="minha_foto" src="rsz_pessoaprogamando.jpg" alt="Pessoa Progamando">
+			<table class="table">
+				<ol id="licoes_aprendidas">
+					<li>Fundamentos do Desenvolvimento Web.</li>
+					<li>Introdução-Unix & Shell.</li>
+					<li>Unix & Bash.</li>
+					<li>Git & GitHub.</li>
+					<li>Internet.</li>
+					<li>Intrudução-HTML & CSS.</li>
+					<li>HTML & CSS-Estruturas de página.</li>
+					<li>HTML & CSS-Primeiros passos em CSS.</li>
+					<li>HTML & CSS-Seletores e posicionamento.</li>
+					<li>HTML Semântico.</li>
+				</ol>
+				<ul id="licoes_a_aprender">
+					<li>JavaScript.</li>
+					<li>Lógica de Progamação.</li>
+					<li>JavaScript: DOM, Eventos e Web Storage.</li>
+					<li>HTML & CSS: Forms, Flexbox e Responsivo.</li>
+					<li>JavaScript Es6 e Testes Unitários.</li>
+					<li>Higher Order Functions do JavaScript ES6.</li>
+					<li>JavaScript Assícrono e Promises.</li>
+					<li>Testes automatizados com Jest.</li>
+					<li>Desenvolvimento Front-end.</li>
+					<li>Desenvolvimento Back-end.</li>
+				</ul>
+			</table>
+		</section>
+		<article class="lado-esquerdo">
 			<p>A Trybe é uma escola do futuro para qualquer pessoa que queira melhorar
 			de vida e construir uma carreira de sucesso em tecnologia, onde a pessoa
 			paga quando conseguir um bom trabalho.
@@ -47,7 +55,7 @@
 		</article>
 		 <a href="https://www.betrybe.com/" target="_blanck">Caso tenha se
 		 interessado pelo aprendizadoclique aqui!</a>
-		 <aside>
+		 <aside class="lado-direito">
 			 <p>O processo de aprendizado na Trybe é um dos melhores que já
 			 experimenatei a metodologia aplicada é incrivel!</p>
 		 </aside>
