Alterações no arquivo style.css e no centralização do título

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <!-- Requisito 2 -->
     <header id="cabecalho">
         <h1 id="titulo">Primeiro Projeto - Trybe</h1>
-
-        <nav>
-            <ul>
-                <li>Aprendizado</li>
-                <li></li>       
-            </ul>
-        </nav>
-
+        <section>
+            <nav>
+                <ul>
+                    <li>Aprendizado</li>
+                    <li>Sobre</li>       
+                </ul>
+            </nav>
+        </section>
     </header>
     <!-- Requisito 3 -->
     <section>
