--- a/index.html
+++ b/index.html
@@ -52,6 +52,59 @@
         </section>
       </section>
       <section>
+        <h2>Situação atual no módulo de Fundamentos</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Blocos</th>
+              <th>Estado</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Bloco 01: Unix & Bash</td>
+              <td>Finalizado</td>
+            </tr>
+            <tr>
+              <td>Bloco 02: Git, GitHub e Internet</td>
+              <td>Finalizado</td>
+            </tr>
+            <tr>
+              <td>Bloco 03: Introdução à HTML e CSS</td>
+              <td>Em andamento</td>
+            </tr>
+            <tr>
+              <td>Bloco 04: Introdução à JavaScript e Lógica de Programação</td>
+              <td>Não iniciado</td>
+            </tr>
+            <tr>
+              <td>Bloco 05: JavaScript: DOM, Eventos e Web Storage</td>
+              <td>Não iniciado</td>
+            </tr>
+            <tr>
+              <td>Bloco 06: HTML e CSS: Forms, Flexbox e Responsivo</td>
+              <td>Não iniciado</td>
+            </tr>
+            <tr>
+              <td>Bloco 07: Introdução à JavaScript ES6 e Testes Unitários</td>
+              <td>Não iniciado</td>
+            </tr>
+            <tr>
+              <td>Bloco 08: Higher Order Functions do JavaScript ES6</td>
+              <td>Não iniciado</td>
+            </tr>
+            <tr>
+              <td>Bloco 09: JavaScript Assíncrono e Promises</td>
+              <td>Não iniciado</td>
+            </tr>
+            <tr>
+              <td>Bloco 10: Testes automatizados com Jest</td>
+              <td>Não iniciado</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+      <section>
         <h2>Meu aprendizado</h2>
         <article>
           <p>Até então, escolher entrar na Trybe foi uma das melhores decisões que tive no último mês. Desde que ingressei, reaprendi muitos dos conhecimentos técnicos que já havia aprendido na faculdade, como HTML, CSS e protocolos de rede, mas de uma forma muito mais dinâmica e convidativa. Além disso, mesmo com esse pouco tempo, também aprendi a dar o devido valor às soft skills e como essas habilidades socioemocionais afetam o nosso dia a dia.</p>
