--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Lessons Learned</title>
   </head>
   <body>
     <header id="cabecalho">
@@ -43,7 +43,7 @@
     </main>
 
     <footer id="rodape">
-      <p>Feito com &#128153; por Gilson</p>
+      <p>Feito com &#128153; por <a href="https://www.linkedin.com/in/gilson-pinheiro/" target="_blank">Gilson</a></p>
     </footer>
   </body>
 </html>
