--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
       <li>Metodologias para resolução de problemas</li>
     </ul>
   </section>
+  <footer id="rodape">
+    <p>Conteúdo produzido e atualizado por <em>Tainá Santana</em>, 2021.</p>
+  </footer>
 </body>
 
 </html>
