requisitos do html ok - nextstep css style the CSS

--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <title>Bruno Marques * Project 01</title>
 </head>
 <body>
-  <div class="content">
     <header id="cabecalho">
       <h1 id="titulo">Bruno Marques - Lessons Learned</h1>
       <nav id="menu" class="navi">
         <ul class="lista-menu">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a href="#">About</a></li>
         </ul>
       </nav>
     </header>
@@ -24,7 +23,7 @@
 
     <div class="lists">
       <h1>Lista de Skils</h1>
-      <ol id="icoes_aprendidas">
+      <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Git</li>
         <li>GitHub</li>
@@ -50,19 +49,23 @@
     </ul>  
     
     </div>
+
     <div class="artigos">
       <article >   
-        <h1>sobre seu aprendizad "LOREM"</h1>
-        <section>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ad amet reiciendis pariatur nesciunt dicta laudantium atque nisi debitis, consequatur inventore voluptas facere quasi saepe est iusto ipsam. Quaerat, laborum.
+        <h1>sobre seu aprendizado #loremipsum</h1>
+        <section>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ad amet reiciendis pariatur nesciunt dicta laudantium atque nisi debitis, consequatur inventore voluptas facere quasi saepe est iusto ipsam. Quaerat, laborum.
           
         </section>
-        <aside class="lado-esquerdo"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatum eaque fugiat sunt consectetur, excepturi odit. Minus accusamus cumque id incidunt dolore inventore eius minima, nisi dolores voluptatibus, assumenda molestias!
-        </aside>
+
       </article>
+      <aside class="lado-esquerdo"> <h2>Artigo #aside</h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatum eaque fugiat sunt consectetur, excepturi odit. Minus accusamus cumque id incidunt dolore inventore eius minima, nisi dolores voluptatibus, assumenda molestias!
+      </aside>
     </div>
+
+
     <footer id="rodape" class="footer">
       <span class="by">Aluno Dev: <a href="https://github.com/blmarquess" target="_blank" >@blmarquess</a></span>
     </footer>
-</div>
 </body>
 </html>
