--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
           <section>
               <article>
-                  <p>A Tribe Tem me proporcionadoA Trybe Tem me proporcionado um aprendizado rápido e técnico sobre programação, e vejo que todo o aprendizado exige um esforço enorme da minha parte, visto que eles utilizam o método de ensino que nos fornece a um melhor aprendizado, com isso posso dizer que estou me dedicando muito para conseguir aprender e acompanhar o ritmo da Trybe.</p>
+                  <p>A Trybe Tem me proporcionado um aprendizado rápido e técnico sobre programação, e vejo que todo o aprendizado exige um esforço enorme da minha parte, visto que eles utilizam o método de ensino que nos fornece a um melhor aprendizado, com isso posso dizer que estou me dedicando muito para conseguir aprender e acompanhar o ritmo da Trybe.</p>
               </article>
               <aside>
                   <p>Bem meu aprendizado tem sido bastante puxado, visto que durmo apenas de 5 a 6 horas por dia, e tenho buscado nas horas vagas do trabalho estudar mais sobre o assunto, e buscado tirar duvidas em sites e blogs, e quando preciso na mentoria.</p>
