--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
         <li>Confiar</li>
     </ol>
 
+    <ul class="margem" id="licoes_a_aprender">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+        <li>7</li>
+        <li>8</li>
+        <li>9</li>
+        <li>10</li>
+    </ul>
+
     <table class="margem">
         <tr>
             <th>bloco 1</th>
