Finalized obligatory requirements

--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">
-            Projeto - Lessons Learning
-        </h1>
+        <h1 id="titulo">Projeto - Lessons Learning</h1>
+        <nav>
+            <h1 style="display: none;">Sumario - Navegação</h1>
+            <ul>
+                <li><a href="#minha_foto">Sobre</a></li>
+                <li><a href="#licoes_aprendidas">Aprendi</a></li>
+                <li><a href="#licoes_a_aprender">Aprender</a></li>
+                <li><a href="#artigo_apr">Artigo</a></li>
+                <li><a href="#rodape">Rodape</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section class="profile">
@@ -26,7 +34,7 @@
         </section>
         <section class="learned-list">
             <ol id="licoes_aprendidas">
-                <h3> Ja aprendi </h3>
+                <h1> Ja aprendi </h1>
                 <li>Unix</li>
                 <li>Git</li>
                 <li>GitHub</li>
@@ -39,7 +47,7 @@
                 <li>Zoom</li>
             </ol>
             <ul id="licoes_a_aprender">
-                <h3> Quero aprender </h3>
+                <h1> Quero aprender </h1>
                 <li>JavaScript</li>
                 <li>DOM</li>
                 <li>Forms</li>
@@ -51,6 +59,13 @@
                 <li>Node</li>
                 <li>SQL</li>
         </section>
+        <article id="artigo_apr">
+            <h1>Meu aprendizado</h1>
+            <p>Tenho aprendido bastante como um aluno. Desde os comandos mais básicos até os mais populares sobre o sistema Unix. Também bastante sobre HTML com tags, HTML Semântico e CSS. E uma das coisas mais interessantes que ainda estou desenvolvendo mas que estou gostando muito são as aulas de softskills. Estão me possibilitando adquirir um olhar diferente para meus proprios sentimentos.</p>
+            
+            <aside><p>Eu tenho gostado muito do meu desenvolvimento e tenho descoberto em mim qualidades que eu nem imaginava existirem.</p></aside>
+        </article>
+        
     </main>
     <footer id="rodape">
         <ul>
