--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       <p>Quando aprendi Git e GitHub foi um nó na cabeça! Até conseguir aplicar tudo que li, tive que criar, apagar, e recriar muitos repositórios. Mas com certeza o resultado foi recompensador.</p>
     </aside>  
   </main>
-
+<hr>
   <footer id="rodape">
-
+    <p>Criado e editado por Samuel Monteiro Gonçalves, 2021</p>
   </footer>
 </body>
 </html>
