--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 
 <body>
-    <header id="cabecalho">
-      <section>
-        <h1 id="titulo">O início da <span class="word">jornada</span> começa na <span class="word">Trybe</span>!</h1>
-      </section>
-      <section>
-        <nav id="links">
-          <li><a href="https://github.com/Airtonsilv4" target="_blank">GitHub</a></li>
-          <li><a href="https://www.linkedin.com/in/airton-silva-783780211/" target="_blank">LinkedIn</a></li>
-        </nav>
-      </section>
-    </header>
+  <header id="cabecalho">
+    <section>
+      <h1 id="titulo">O início da <span class="word">jornada</span> começa na <span class="word">Trybe</span>!</h1>
+    </section>
+    <section>
+      <nav id="links">
+        <li><a href="https://github.com/Airtonsilv4" target="_blank">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/airton-silva-783780211/" target="_blank">LinkedIn</a></li>
+      </nav>
+    </section>
+  </header>
   <main>
     <div class="lista">
       <section>
@@ -37,12 +37,41 @@
         </aside>
       </section>
     </div>
-
-
-
-
-
-
+    <div class="listas">
+      <section>
+        <h2>Conqu<span class="word">istas</span></h2>
+        <ol id="licoes_aprendidas">
+          <li>Unix & Bash</li>
+          <li>Conceitos de Internet</li>
+          <li>Introdução ao Git</li>
+          <li>Introdução ao GitHub</li>
+          <li>HTML</li>
+          <li>HTML Semântico</li>
+          <li>CSS</li>
+          <li>Autoconhecimento</li>
+          <li>Empatia</li>
+          <li>Inteligência Emocional</li>
+        </ol>
+      </section>
+      <section>
+        <h2>Obje<span class="word">tivos</span></h2>
+        <ul id="licoes_a_aprender">
+          <li>JavaScript</li>
+          <li>Comunicação</li>
+          <li>Autogestão</li>
+          <li>Front-end</li>
+          <li>Back-end</li>
+          <li>Science Computer</li>
+          <li>Banco de dados</li>
+          <li>SQL</li>
+          <li>Python</li>
+          <li>Programação orientada a objetos</li>
+        </ul>
+      </section>
+    </div>
   </main>
+  <!--<footer id="rodape">
+    aaaaaaaaaaaaaaaa
+  </footer>-->
 </body>
 </html>
