--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <h1 id="titulo">Licoes Aprendidas na Trybe</h1> 
     <nav>
       <ul>
-        <li>item3</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#contato">Contato</a></li>
         <li><a href="https://github.com/JeffThierch" target="_blank">GitHub</a></li>
-        <li>LinkedIn</li>
+        <li><a href="https://www.linkedin.com/in/jeffthierch/" target="_blank">LinkedIn</a></li>
       </ul>
     </nav>
    
@@ -77,7 +78,7 @@
           <p>Comecamos por Fundamentos do Desenvolvimento,fomos para Unix & Bash aprendemos os comandos do bash e sobre o unix, aprendemos git, seus comandos e github, como a internet funciona e fomos para HTML e CSS, onde estamos aprendendo a estrutura do HTML e as propriedades do CSS</p>
         </aside>
       </section>
-      <h1 class="sub-title-contact">Contato</h1>
+      <h1 id="contato" class="sub-title-contact">Contato</h1>
       <section class="tabel-section">
         <table class="tabela-info">
           <tr>
