--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
             officia? Eius?</p>
     </article>
 
+    <aside class="lado-direito">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi distinctio deleniti in consequuntur molestiae
+            rerum sequi ipsum nobis, atque asperiores iusto placeat. Eius aut excepturi unde provident vitae a quae.</p>
+    </aside>
+
     <footer id="rodape">
         &copy Grazziano B Fagundes 2021
     </footer>
