aplicação de textos e da nav

--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
 <body>
   <header id="cabecalho"> 
       <h1 id="titulo">Lições Aprendidas! - Trybe - Projeto</h1>
+      
   </header>
   <main>
     <div>
       <img id="minha_foto" src="https://ialamov.github.io./images/WhatsApp%20Image%202021-03-02%20at%2015.09.07.jpeg" alt="Foto de perfil de Douglas Ialamov">
-      <a href="https://www.linkedin.com/in/douglas-ialamov-48a62724/" target="_blank">Linkedin Pessoal</a>
     </div>
+    <nav>
+      <ul class="link">
+        <li>Home</li>
+        <li><a href="https://www.linkedin.com/in/douglas-ialamov-48a62724/" target="_blank">Linkedin Pessoal</a></li>
+      </ul>
+    </nav>
     <section>
       <h2>Lições aprendidas</h2>
       <ol id="licoes_aprendidas">
@@ -31,7 +37,7 @@
         <li>Git, Github e Internet</li>
       </ol>
       <h2>Lições que desejo aprender</h2>
-      <ul>
+      <ul id="licoes_a_aprender">
         <li>Rest</li>
         <li>JavaScript</li>
         <li>Flexbox</li>
@@ -44,9 +50,13 @@
         <li>Deployment</li>
       </ul>
     </section>
+    <article>
+      <h3>O meu caminho até aqui!</h3>
+      <p>Incrivelmente me assusto com o que sou capaz de fazer em curto espaço de tempo. A aprendizagem foi intensa, mas recompensadora. Inegavelmente o Tio Jack foi essencial para guiar por este caminho tortuoso dos becos escuros do HTML e CSS. Porém, agora me sinto, pelo menos um pouco, mais preparado para enfrentar maiores desafios e evoluir finalmente. É razoável afirmar que a Trybe será o foco de meus esforços por muito tempo.</p>
+    </article>
     <aside>
-      <h3>O caminnho até aqui!</h3>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia officia, ex impedit error in non voluptatem, at, quae necessitatibus quis mollitia? Dolore debitis, tenetur expedita saepe possimus quidem quam cum?</p>
+      <h3>Passagem sobre o aprendizado</h3>
+      <p>Durante a longa e dura jornada, me deparei com um crescimento inesperado em um curto período. Veja, mesmo que antes do início da Trybe tentei aprender HTML/CSS por intermédio de outras plataformas, sem sucesso. As informações providas, apesar de boas, não direcionam em um crescimento contínuo.</p>
     </aside>
   </main>
   <footer id="rodape">
