--- a/index.html
+++ b/index.html
@@ -65,8 +65,19 @@
     </section>
   </main>
 
+  <table>
+    <tr>
+    <td>Módulo 1:</td>
+    <td>Ok</td>
+    </tr>
+    <tr>
+    <td>Módulo 2:</td>
+    <td>-</td>
+    </tr>
+    </table>
+
   <footer id="rodape">
   </footer>
-  
+
 </body>
 </html>
